Fix blur on left bar using z-index on center grid

--- a/CSS/background.css
+++ b/CSS/background.css
@@ -22,7 +22,7 @@ html, body {
     height: 100%;   
     width: 100%;
     position: absolute;
-    z-index: 1;
+    z-index: 10;
 }
 
 .top-triangle {
@@ -128,6 +128,7 @@ html, body {
 .three {
     grid-column: 2 / 20;
     grid-row: 2;
+    z-index: 1;
 }
 
 .four {
@@ -179,9 +180,9 @@ div:hover > .sidebar-left, div:hover > .sidebar-right {
 }
 
 .sidebar-left {
-    border-right: var(--sidebar-props)
+    border-right: var(--sidebar-props);
 }
 
 .sidebar-right {
-    border-left: var(--sidebar-props)
+    border-left: var(--sidebar-props);
 }
